# Luci

./: .gitignore  DEV-NOTES.md  README.md  package-lock.json  package.json  vercel.json
apps/backend/: Cargo.toml
apps/backend/sql/: schema.sql
apps/backend/src/: main.rs
apps/backend/src/handlers/: call.rs  callback.rs  health.rs  mod.rs  voice.rs
apps/backend/src/models/: call.rs  mod.rs  user.rs  voice.rs
apps/backend/src/routes/: mod.rs
apps/backend/src/services/: elevenlabs.rs  mod.rs  openai.rs
apps/mobile/: App.tsx  package.json  tailwind.config.js
apps/mobile/src/components/: CallCard.tsx
apps/mobile/src/screens/: CallScreen.tsx  HistoryScreen.tsx  HomeScreen.tsx  LoginScreen.tsx  SettingsScreen.tsx
apps/mobile/src/types/: navigation.ts  react-native-voice.d.ts
apps/web/: README.md  pnpm-lock.yaml
public/media/: README.md
src/app/: globals.css
src/components/: LandingPage.tsx  MediaExample.tsx
