[package]
name = "luci-backend"
version = "0.1.0"
edition = "2021"
description = "Luci AI Call Assistant Backend API"

[dependencies]
# Web framework
axum = "0.6.20"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
tokio = { version = "1.32.0", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }

# Serialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# Database
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
redis = { version = "0.23.3", features = ["tokio-comp"] }

# OpenAI and AI integrations
async-openai = "0.14.2"

# Authentication
jsonwebtoken = "8.3.0"

# Utilities
dotenv = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
thiserror = "1.0.48"
anyhow = "1.0.75"

# Voice processing
reqwest = { version = "0.11.20", features = ["json", "stream"] }
tokio-stream = "0.1.14"
futures = "0.3.28"
bytes = "1.5.0"

[dev-dependencies]
tokio-test = "0.4.3"
mockall = "0.11.4" 